--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,120 @@
-/* You can add global styles to this file, and also import other style files */
+
+
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+
+
+
+$ADLTest-primary: mat-palette($mat-indigo);
+$ADLTest-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$ADLTest-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$ADLTest-theme: mat-light-theme((
+  color: (
+    primary: $ADLTest-primary,
+    accent: $ADLTest-accent,
+    warn: $ADLTest-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($ADLTest-theme);
+
+
+
+/** 1. Define new color palette. */
+$md-custom-toggle-colors: (
+  50 : #e8f6e9,
+  100 : #c5e9c8,
+  200 : #9fdaa4,
+  300 : #79cb7f,
+  400 : #5cc063,
+  500 : #3fb548,
+  600 : #39ae41,
+  700 : #31a538,
+  800 : #299d30,
+  900 : #1b8d21,
+  A100 : #c6ffc9,
+  A200 : #93ff98,
+  A400 : #60ff67,
+  A700 : #47ff4f,
+  contrast: (
+    50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #000000,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #000000,
+  )
+);
+
+$custom-toggle-theme: mat-light-theme(mat-palette($mat-red), mat-palette($md-custom-toggle-colors));
+@include mat-slide-toggle-theme($custom-toggle-theme);
+
+
+
+
+
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+@import './styles/variables.scss';
+@import './styles/grid_Home.scss';
+@import './styles/app.scss';
+  
+
+.logo {
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+    &__img {
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        padding: 5px;
+        height: 40px;
+        width: 90px;
+      }
+      
+      &__img:hover {
+        box-shadow: 0 0 2px 1px rgba(191, 234, 248, 0.5);
+      }
+}
+
+.products__nav {
+    margin-top:  35%;
+    display: flex;
+    justify-content:center;
+    & label {
+        font-size: 12;
+    }
+}
+
