add home components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       </nav>
   </div>
   <div class="containerHome__content">
-    componente producto
+    <app-products> </app-products>
   </div>
   <div class="containerHome__footer">Footer</div>
 </div>
