--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,18 @@
 <div class="header"> 
+    
     <div class="header__item"> <label> buenos dias , alexis </label></div>
-    <div class="header__item"><label>  perfil</label> </div>
-    <div class="header__item"><label>  alertas </label> </div>
-    <div class="header__item"><label>  salida Segura </label></div>
+    <div class="header__item">
+        <label>  perfil</label> 
+        <fa-icon [icon]="faUserCircle"></fa-icon> <hr>  
+    </div>
+    <div class="header__item">
+        <label>  alertas </label> 
+        <fa-icon [icon]="faBell"></fa-icon> <hr >  
+    
+    </div>
+    <div class="header__item">
+        <label>  salida Segura </label>
+        <fa-icon [icon]="faSignOutAlt"></fa-icon>
+    </div>
+
 </div>
