--- a/src/app/home/components/ProductHeader/product-header.component.html
+++ b/src/app/home/components/ProductHeader/product-header.component.html
@@ -1,7 +1,7 @@
 
 <div class="productheader"> 
-  <div>
-     <app-slide-button></app-slide-button>     
+  <div class="productheader__slide">
+     <app-slide-button (onChecked)="onRefreshProducts($event)"></app-slide-button>     
    </div>
     
     <div class="productheader__carousel">
