--- a/src/app/home/components/ProductHeader/product-header.component.scss
+++ b/src/app/home/components/ProductHeader/product-header.component.scss
@@ -2,10 +2,18 @@
     {
          display: flex;
          flex-direction: column;
+         margin-bottom: 15px;
+
+        &__slide{
+             margin-bottom: 10px;
+        }
+
          &__carousel{
               display: flex;
               justify-content: center;
               align-items: center;
+              box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.15);
+              padding: 0px 15px 0px 35px;
               label{
                position: relative;
                margin-right: auto;
