--- a/src/styles/grid_Home.scss
+++ b/src/styles/grid_Home.scss
@@ -2,28 +2,28 @@
 .containerHome {
     display: grid;
     margin-top: 0px;
-    grid-template-columns: [x0] 1fr [x1] 7fr [x2] 1fr [x3];
-    grid-template-rows: [top-line] 1fr [top-medium-line] 6fr [conten-medium-line]  4fr [bottom-medium-line] 1fr [bottom-line];
+    grid-template-columns: [x0] 1.50fr [x1] 0.50fr [x2] 9fr [x3] 0.50fr [x4];
+    grid-template-rows: [top-line] 1fr [top-medium-line] 5fr [conten-medium-line]  4fr [bottom-medium-line] 1fr [bottom-line];
     height: 99vh;
-    grid-column-gap: 2%;
+
 
     &__headerUser{
-        grid-column: x1 / x3;
+        grid-column: x2 / x3;
         grid-row: top-line / top-medium-line;
       }
       &__content {
-        grid-column: x1 / x3;
+        grid-column: x2 / x3;
         grid-row: top-medium-line / bottom-line;
       }
       &__sidebar {
         grid-column: x0 / x1;
-        grid-row: top-line / conten-medium-line;
+        grid-row: top-line / bottom-medium-lin;
         -webkit-box-shadow: 5px 3px 0px -1px rgba(150,150,150,0.55); 
         box-shadow: 5px 3px 0px -1px rgba(150,150,150,0.55);
       }
       &__footer {
         grid-column: x0 / x3;
-        grid-row: bottom-medium-line;
+        grid-row: bottom-medium-line /bottom-line;
       }
 
 }
