--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   <div class="containerHome__content">
     <app-products> </app-products>
   </div>
-  <div class="containerHome__footer">Footer</div>
+  <div class="containerHome__footer"></div>
 </div>
 
 <router-outlet></router-outlet>
