--- a/src/app/home/components/CardProduct/card-product.component.html
+++ b/src/app/home/components/CardProduct/card-product.component.html
@@ -1,20 +1,51 @@
 
+     <mat-card   class="product-card"   *ngFor="let item of ArrayProduct" >
+          <div class="productHeader">      
+              <span  class="productHeader__icon">
+                <fa-icon  size="2x" class="fas" [icon]="onLoadImg(item.accountInformation.productType)"></fa-icon> 
+              </span>       
+             <span class="productHeader__VerDetalle" > <label (click)="toggleClass(item)"> {{ (item.isShown)? 'Cerrar X': 'Ver Detalle' }}</label>  </span>
+          </div>
+            <mat-card-content>
+              <div class="productHeader__title"> {{item.accountInformation.productType | visamaster :item.cardcredit :item.id }}   </div>
+              <mat-card-subtitle>Nro. {{item.id | creditcardnumber : item.cardcredit :item.id}}</mat-card-subtitle>
+              <div *ngIf="item.productAccountBalances &&  item.productAccountBalances.saldo_disponible">
+                <p>saldo disponible </p>
+                   {{item.productAccountBalances.saldo_disponible.amount | currency}} 
+                </div>
 
-    <mat-card   class="product-card"  *ngFor="let item of ArrayProduct">
+             <div [ngClass]="(item.isShown)?'show':'hidden'">
 
-      <div class="productHeader">      
-          <span  class="productHeader__icon">
-            <fa-icon  size="2x" class="fas" [icon]="onLoadImg(item.accountInformation.productType)"></fa-icon> 
-          </span>       
-         <span class="productHeader__VerDetalle">  Ver Detalle</span>
-      </div>
-        <mat-card-content>
-          <mat-card-title> {{item.accountInformation.productType}}   </mat-card-title>
-          <mat-card-subtitle>Nro. {{item.accountInformation.id}}</mat-card-subtitle>
-          <p>saldo disponible </p>
-          <div *ngIf="item.productAccountBalances &&  item.productAccountBalances.saldo_disponible">
-              {{item.productAccountBalances.saldo_disponible.amount | currency}} 
-            </div>
-        </mat-card-content>
+                   <label>  informacion adicional de la tarjeta </label>
+                  <div>  Estado : 
+                    <label> 
+                    {{item.locked ? 'bloqueado' :'Habilitado'  }} 
+                    </label>
+                  </div>
+           
+                  <div>  Fecha Ultima Transaccion: 
+                    <label> 
+                     {{ item.lastTransactionDate| stringDate  }}  
+                    </label>  
+                  </div>
+                   
+              </div> 
 
-      </mat-card>
+              <div *ngIf="item.cardcredit"> 
+
+                <div class="clas1"> 
+                  <app-progressbar [coverage]="50"> </app-progressbar>
+                </div>
+
+                <!-- <div class="clas2"> 
+                   <label> no se pudo determinar la fecha de pago </label> 
+                  <button mat-stroked-button color="primary">PAGAR</button>
+                </div> -->
+              </div>
+            </mat-card-content>
+          </mat-card> 
+
+
+
+       
+          
