--- a/src/app/home/components/CardProduct/card-product.component.scss
+++ b/src/app/home/components/CardProduct/card-product.component.scss
@@ -1,10 +1,9 @@
 
-
-
-
+@import '../../../../styles/variables.scss';
 .product-card {
     margin: 2px 3px 4px;
     min-width: 250px;
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.15);
  }
  
  .productHeader {
@@ -20,7 +19,15 @@
       font-size: 11px;
       height: fit-content;
       color: #348ca2;
-      cursor: pointer;
+      
+      label{
+        cursor: pointer;
+      }
+    }
+    &__title{
+      padding: 8px 0px 8px 0px;
+      font-size: 14px;
+      font-family: $RTBlack;
     }
 
     &__VerDetalle::after {
@@ -28,6 +35,14 @@
       margin-left: 5px;
     }
  }
+
+.show{
+  display: inline;
+}
+.hidden{
+  display: none;
+}
+
 
 
 
