--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,38 +1,13 @@
 
-<div class="sidebar">  
+<div class="sidebar" *ngFor="let item of options">  
   <hr>
     <div class="sidebar__header">
-      PAGOS 
+      {{item}} 
     </div>
     <div class="sidebar__body">
       <ng-content></ng-content>
     </div>
   </div>
-  <div class="sidebar">  
-    <hr>
-      <div class="sidebar__header">
-        TRANSFERENCIAS
-      </div>
-      <div class="sidebar__body">
-        <ng-content></ng-content>
-      </div>
-    </div>
-    <div class="sidebar">  
-      <hr>
-        <div class="sidebar__header">
-          CERTIFICADOS
-        </div>
-        <div class="sidebar__body">
-          <ng-content></ng-content>
-        </div>
-      </div>
-      <div class="sidebar">  
-        <hr>
-          <div class="sidebar__header">
-            SEGURIDAD
-          </div>
-          <div class="sidebar__body">
-            <ng-content></ng-content>
-          </div>
-        </div>
+ 
+
        
