--- a/src/styles/grid_Home.scss
+++ b/src/styles/grid_Home.scss
@@ -6,7 +6,6 @@
     grid-template-rows: [top-line] 1fr [top-medium-line] 7fr [conten-medium-line]  4fr [bottom-medium-line] 1fr [bottom-line];
     height: 99vh;
 
-
     &__headerUser{
         grid-column: x2 / x3;
         grid-row: top-line / top-medium-line;
@@ -18,12 +17,14 @@
       &__sidebar {
         grid-column: x0 / x1;
         grid-row: top-line / conten-medium-line;
+        display: inline-table;
         -webkit-box-shadow: 5px 3px 0px -1px rgba(150,150,150,0.55); 
         box-shadow: 5px 3px 0px -1px rgba(150,150,150,0.55);
       }
       &__footer {
         grid-column: x0 / x3;
         grid-row: bottom-line;
+        display: inline-table;
       }
 
 }
