--- a/src/app/home/components/Products/products.component.scss
+++ b/src/app/home/components/Products/products.component.scss
@@ -2,12 +2,11 @@
     display: flex;
     flex-flow: row wrap;
 }
-.cardItems
+
+.cardItemContainerM
 {
     display: flex;
-    flex-flow: column wrap;
-   
+    flex-flow: column;
 }
-
 
 
