--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -58,4 +58,13 @@ $colors: (
   danger: #dc3545,
   light: #f8f9fa,
   dark: #343a40
-)
+);
+
+
+$screen-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+) !default;
