--- a/src/app/home/components/CardProduct/card-product.component.html
+++ b/src/app/home/components/CardProduct/card-product.component.html
@@ -14,26 +14,28 @@
                {{item.productAccountBalances.saldo_disponible.amount | currency}} 
             </div>
             
-         <div *ngIf="(item.isShown)">
-          <p>INFORMACIÓN ADICIONAL: </p>
-              <div>  Estado : 
-                <label> 
-                {{item.locked ? 'bloqueado' :'Habilitado'  }} 
-                </label>
-              </div>
+         <div *ngIf="(item.isShown)" class="cardDetail"  >
+          <p>INFORMACIÓN ADICIONAL </p>
+                <div  class="cardDetail__item"  >
+                  <span   class="cardDetail__item__title">  Estado :   </span>
+                    <label> 
+                      {{item.locked ? 'bloqueado' :'Habilitado'  }} 
+                    </label>
+                 </div>
+                 
+                 <div  class="cardDetail__item"  >
+                  <span   class="cardDetail__item__title">  Banco :   </span>
+                    <label> 
+                      {{item.accountInformation.bank }} 
+                    </label>
+                 </div>
 
-              <div>  Banco : 
-                <label> 
-                {{item.accountInformation.bank }} 
-                </label>
-              </div>
-
-              <div>  Fecha Ultima Transaccion: 
-                <label> 
-                 {{ item.lastTransactionDate| stringDate  }}  
-                </label>  
-              </div>
-               
+                 <div  class="cardDetail__item"  >
+                  <span   class="cardDetail__item__title">  Fecha Ultima Transaccion:    </span>
+                    <label> 
+                      {{ item.lastTransactionDate| stringDate  }}  
+                    </label> 
+                 </div>
           </div> 
 
           <div *ngIf="item.cardcredit"> 
