--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 
+
 <div class="containerHome">
   <div class="containerHome__headerUser">
     <app-header></app-header>
@@ -7,11 +8,8 @@
      <div class="logo"> 
         <img   class="logo__img" src="../assets/imgs/logo.jpeg" alt="Test">
      </div>
-     <div class="products__nav">  
-      <label >{{titleProduct}}</label>
-     </div>
      <nav  class="options_sidebar"> 
-       <app-sidebar> </app-sidebar>
+      <app-main-sidebar></app-main-sidebar>
       </nav>
   </div>
   <div class="containerHome__content">
