--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -1,22 +1,41 @@
 @import '../../../../styles/variables.scss';
+@import '../../../../styles/mixin.scss';
+
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    &__title{
+        font-size: 14px;
+        font-family: $RTBold;
+        margin: 30px 0px 20px 0px;
+    }
         &__header {
-             padding: 4px;
-            font-size: 12px;
-            margin: auto;
-            text-align: center;
-            font-family: $RThin;
             cursor: pointer;
+            width: 100%;
+            padding: 6px;
+        }
+        &__header__item{
+            font-size: 12px;
+            font-family: $RThin;
+            display: flex;
+            width: 100%;
+            position: relative;
+            justify-content: center;
         }
 
-        &__body {
-          padding: 1px 1px;
-          background: inherit;
-          overflow-y: hidden;
-          font-size: 10px;
-        
+        @include respond-to("md"){
+            &__header__item::before {
+                content: "";
+                position: absolute;
+                border-radius: 2px;
+                height: 1px;
+                background-color: #e6e0e0;
+                width: 122px;
+               transform: translateY(-8px);
         }
-        
+        }
+    
+
+       
       }
-
-     
