addd sidebar responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,20 +2,17 @@
 
 <div class="containerHome">
   <div class="containerHome__headerUser">
-    <app-header></app-header>
+     <app-header></app-header>
   </div>
   <div class="containerHome__sidebar"> 
-     <div class="logo"> 
-        <img   class="logo__img" src="../assets/imgs/logo.jpeg" alt="Test">
-     </div>
-     <nav  class="options_sidebar"> 
       <app-main-sidebar></app-main-sidebar>
-      </nav>
   </div>
   <div class="containerHome__content">
-    <app-products> </app-products>
+      <app-products> </app-products> 
   </div>
-  <div class="containerHome__footer"></div>
+  <div class="containerHome__footer">
+      validacion 
+  </div>
 </div>
 
 <router-outlet></router-outlet>
