--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,5 +1,6 @@
-@import '../../../../styles/mixin';
+
 @import '../../../../styles/variables.scss';
+@import '../../../../styles/mixin.scss';
 
 .header {
     display: flex;
@@ -65,6 +66,7 @@
     &__item {
        display: flex;
        align-items: center;
+       @include respond-to("xs"){padding: 8px; }
         padding: 1em;
          cursor: pointer;
         &__line{
