--- a/src/app/shared/components/main-sidebar/main-sidebar.component.scss
+++ b/src/app/shared/components/main-sidebar/main-sidebar.component.scss
@@ -1,44 +1,159 @@
 @import '../../../../styles/variables.scss';
+@import '../../../../styles/mixin.scss';
+ @mixin line-burger()
+   {
+        width: 50%;
+        height: 4px;
+        background-color: white;
+        border-radius: 5px;
+        transition:  all .5s ease-in-out;
+  }
+
+  @mixin line-burger-open()
+  {
+    height: 9px;
+    width: 50px;
+    background: map-get($colors, orange);;
+  }
+ 
+
+.menu-btn {
+  position: relative;
+  @include respond-to("xs"){
+    display: flex;
+  }
+  @include respond-to("md"){
+    display: none;
+  }
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  transition:  all .5s ease-in-out;
+  background: map-get($colors, indigo);
+  
+    &__burger{
+      @include  line-burger;
+    }
+    &__burger::before{
+      content: '';
+      position: absolute;
+      @include  line-burger;
+      transform: translateY(-16px);
+    }
+
+    &__burger::after{
+            content: '';
+            position: absolute;
+            @include  line-burger;
+            transform: translateY(16px);
+    }
+}
+
+/* animation */
+.menu-btn.open .menu-btn__burger
+{
+  transform: translateX(-60px);
+}
+.menu-btn.open .menu-btn__burger::before{
+  transform: rotate(45deg)     translate(40px , -40px);
+   @include line-burger-open;
+}
+
+.menu-btn.open .menu-btn__burger::after{
+  transform: rotate(-45deg)    translate(40px , 40px);
+  @include line-burger-open;
+}
+
+.logo{
+    display: none;
+    @include respond-to("md"){
+      display: flex;
+    }
+}
+
+
 .sidebar {
+    @include respond-to("md"){
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    display: table-column;
+  
+    &__title{
+        font-size: 14px;
+        font-family: $RTBold;
+        margin: 30px 0px 20px 0px;
+     }
         &__header {
-             padding: 4px;
-            font-size: 12px;
-            margin: auto;
-            text-align: center;
-            font-family: $RThin;
             cursor: pointer;
+            width: 100%;
+            padding: 6px;
+        }
+        &__header__item{
+            font-size: 12px;
+            font-family: $RThin;
+            display: flex;
+            width: 100%;
+            position: relative;
+            justify-content: center; 
+        }
+        @include respond-to("md"){
+            &__header__item::before {
+                content: "";
+                position: absolute;
+                border-radius: 2px;
+                height: 1px;
+                background-color: #e6e0e0;
+                width: 122px;
+               transform: translateY(-8px);
+            }
         }
 
-        &__body {
-          padding: 1px 1px;
-          background: inherit;
-          overflow-y: hidden;
-          font-size: 10px;
-        
-        }
-        
-      }
+     
+    }
+
+    .burgger__open{
+        position: fixed;
+        z-index: 2;
+        height: 100vh;
+        background: map-get($colors, indigo);
+        width: 100%;
+        transition: transform .7s ease-in-out;
+    }
 
 
+  .sidebarmb{
+        display: grid;
+        justify-content: center;
+        align-items: center;
+        grid-gap: 2em;
+        color: white;
+         .sidebar__title{
+            font-size: 25px;
+          }
+          .sidebar__header__item{
+            font-size: 16px;
+            font-family: $RTBold;
+            width: 100%;
+          }
+          .sidebar__header.active{
+            animation: fadeIn ease 3s;
+          }  
+  }
 
+  
+  @keyframes fadeIn{
+    0% {
+      transform: translateY(-40px);
+      opacity:0;
+    }
+    100% {
+      transform: translateY(0px);
+      opacity:1;
+    }
+  }
 
-// .sidenav-container {
-//   height: 100%;
-// }
-
-// .sidenav {
-//   width: 200px;
-// }
-
-// .sidenav .mat-toolbar {
-//   background: inherit;
-// }
-
-// .mat-toolbar.mat-primary {
-//   position: sticky;
-//   top: 0;
-//   z-index: 1;
-// }
-
-
-
+  
